force-app/main/default/objects/Transaction_Type__c/Transaction_Type__c.object-meta.xml
<CustomObject>
    <label>Transaction Type</label>
    <nameField>
        <label>Transaction Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>