force-app/main/default/objects/Transaction_Type__c/fields/Adhere_To_Recovery_Time__c.field-meta.xml
<CustomField>
        <fullName>Adhere_To_Recovery_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhere To Recovery Time</label>
        <type>Checkbox</type>
    </CustomField>