force-app/main/default/objects/Transaction_Type__c/fields/ADJ_CVT_Date__c.field-meta.xml
<CustomField>
        <fullName>ADJ_CVT_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADJ CVT Date</label>
        <type>Checkbox</type>
    </CustomField>