force-app/main/default/objects/Transaction_Type__c/fields/ADJ_Type__c.field-meta.xml
<CustomField>
        <fullName>ADJ_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADJ Type</label>
        <type>Checkbox</type>
    </CustomField>