force-app/main/default/objects/Transaction_Type__c/fields/Alert_CSR__c.field-meta.xml
<CustomField>
        <fullName>Alert_CSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert CSR</label>
        <type>Checkbox</type>
    </CustomField>