force-app/main/default/objects/Transaction_Type__c/fields/Allow_CC__c.field-meta.xml
<CustomField>
        <fullName>Allow_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow CC</label>
        <type>Checkbox</type>
    </CustomField>