force-app/main/default/objects/Transaction_Type__c/fields/Allow_E_Edition__c.field-meta.xml
<CustomField>
        <fullName>Allow_E_Edition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow E Edition</label>
        <type>Checkbox</type>
    </CustomField>