force-app/main/default/objects/Transaction_Type__c/fields/Allow_For_Inactive__c.field-meta.xml
<CustomField>
        <fullName>Allow_For_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow For Inactive</label>
        <type>Checkbox</type>
    </CustomField>