force-app/main/default/objects/Transaction_Type__c/fields/Allow_MS__c.field-meta.xml
<CustomField>
        <fullName>Allow_MS__c</fullName>
        <label>Allow MS</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>