force-app/main/default/objects/Transaction_Type__c/fields/Allow_OP__c.field-meta.xml
<CustomField>
        <fullName>Allow_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow OP</label>
        <type>Checkbox</type>
    </CustomField>