force-app/main/default/objects/Transaction_Type__c/fields/Apply_Credit_to_Subscription__c.field-meta.xml
<CustomField>
        <fullName>Apply_Credit_to_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked will apply the per copy for the date chosen.</inlineHelpText>
        <label>Apply Credit to Subscription</label>
        <type>Checkbox</type>
    </CustomField>