force-app/main/default/objects/Transaction_Type__c/fields/Call_Subscriber__c.field-meta.xml
<CustomField>
        <fullName>Call_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Subscriber</label>
        <type>Checkbox</type>
    </CustomField>