force-app/main/default/objects/Transaction_Type__c/fields/Car_Complaint_Code__c.field-meta.xml
<CustomField>
        <fullName>Car_Complaint_Code__c</fullName>
        <label>Car Complaint Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>