force-app/main/default/objects/Transaction_Type__c/fields/Carryover__c.field-meta.xml
<CustomField>
        <fullName>Carryover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carryover</label>
        <type>Checkbox</type>
    </CustomField>