force-app/main/default/objects/Transaction_Type__c/fields/Category__c.field-meta.xml
<CustomField>
        <fullName>Category__c</fullName>
        <inlineHelpText>Choose appropriate for transaction viewer</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier Me</fullName>
                </value>
                <value>
                    <fullName>CC_Request</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Credit_Card</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Product Change</fullName>
                </value>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Vacation Pack</fullName>
                </value>
                <value>
                    <fullName>VH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>