force-app/main/default/objects/Transaction_Type__c/fields/CHGBACK__c.field-meta.xml
<CustomField>
        <fullName>CHGBACK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHGBACK</label>
        <type>Checkbox</type>
    </CustomField>