force-app/main/default/objects/Transaction_Type__c/fields/CHGBACK_SUBAMT__c.field-meta.xml
<CustomField>
        <fullName>CHGBACK_SUBAMT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHGBACK SUBAMT</label>
        <type>Checkbox</type>
    </CustomField>