force-app/main/default/objects/Transaction_Type__c/fields/CHGBACK_YN__c.field-meta.xml
<CustomField>
        <fullName>CHGBACK_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHGBACK YN</label>
        <type>Checkbox</type>
    </CustomField>