force-app/main/default/objects/Transaction_Type__c/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Matches DSI Code</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>