force-app/main/default/objects/Transaction_Type__c/fields/CRGIVEN__c.field-meta.xml
<CustomField>
        <fullName>CRGIVEN__c</fullName>
        <label>CRGIVEN</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>