force-app/main/default/objects/Transaction_Type__c/fields/Delivery_Day_Type__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Day_Type__c</fullName>
        <inlineHelpText>Controls if the day of the week factors into displaying the complaint. All (will always display), Weekday (only M-F), Saturday only, Sunday only.</inlineHelpText>
        <label>Delivery Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Weekday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>