force-app/main/default/objects/Transaction_Type__c/fields/Dispatch__c.field-meta.xml
<CustomField>
        <fullName>Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatch</label>
        <type>Checkbox</type>
    </CustomField>