force-app/main/default/objects/Transaction_Type__c/fields/DSI__c.field-meta.xml
<CustomField>
        <fullName>DSI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If transaction needs to be transmitted to DSI then checkbox.</inlineHelpText>
        <label>DSI?</label>
        <type>Checkbox</type>
    </CustomField>