force-app/main/default/objects/Transaction_Type__c/fields/Ending_Date__c.field-meta.xml
<CustomField>
        <fullName>Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </CustomField>