force-app/main/default/objects/Transaction_Type__c/fields/GL_Reference__c.field-meta.xml
<CustomField>
        <fullName>GL_Reference__c</fullName>
        <label>GL Reference</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>