force-app/main/default/objects/Transaction_Type__c/fields/Internet__c.field-meta.xml
<CustomField>
        <fullName>Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet</label>
        <type>Checkbox</type>
    </CustomField>