force-app/main/default/objects/Transaction_Type__c/fields/Late_Start__c.field-meta.xml
<CustomField>
        <fullName>Late_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Start</label>
        <type>Checkbox</type>
    </CustomField>