force-app/main/default/objects/Transaction_Type__c/fields/Late_Start_Debit__c.field-meta.xml
<CustomField>
        <fullName>Late_Start_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Start Debit</label>
        <type>Checkbox</type>
    </CustomField>