force-app/main/default/objects/Transaction_Type__c/fields/Next_Day_Delivery__c.field-meta.xml
<CustomField>
        <fullName>Next_Day_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Day Delivery</label>
        <type>Checkbox</type>
    </CustomField>