force-app/main/default/objects/Transaction_Type__c/fields/NON_HD__c.field-meta.xml
<CustomField>
        <fullName>NON_HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NON HD</label>
        <type>Checkbox</type>
    </CustomField>