force-app/main/default/objects/Transaction_Type__c/fields/NON_Subscriber__c.field-meta.xml
<CustomField>
        <fullName>NON_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NON Subscriber</label>
        <type>Checkbox</type>
    </CustomField>