force-app/main/default/objects/Transaction_Type__c/fields/Pager__c.field-meta.xml
<CustomField>
        <fullName>Pager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pager</label>
        <type>Checkbox</type>
    </CustomField>