force-app/main/default/objects/Transaction_Type__c/fields/Popup_Code__c.field-meta.xml
<CustomField>
        <fullName>Popup_Code__c</fullName>
        <label>Popup Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>