force-app/main/default/objects/Transaction_Type__c/fields/Popup_Func__c.field-meta.xml
<CustomField>
        <fullName>Popup_Func__c</fullName>
        <label>Popup Func</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>