force-app/main/default/objects/Transaction_Type__c/fields/PRTBUNDLE__c.field-meta.xml
<CustomField>
        <fullName>PRTBUNDLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRTBUNDLE</label>
        <type>Checkbox</type>
    </CustomField>