force-app/main/default/objects/Transaction_Type__c/fields/Recovery_Flag__c.field-meta.xml
<CustomField>
        <fullName>Recovery_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recovery Flag</label>
        <type>Checkbox</type>
    </CustomField>