force-app/main/default/objects/Transaction_Type__c/fields/Redeliver__c.field-meta.xml
<CustomField>
        <fullName>Redeliver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Instruction for DSI</inlineHelpText>
        <label>Redeliver</label>
        <type>Checkbox</type>
    </CustomField>