force-app/main/default/objects/Transaction_Type__c/fields/SENDMSG__c.field-meta.xml
<CustomField>
        <fullName>SENDMSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SENDMSG</label>
        <type>Checkbox</type>
    </CustomField>