force-app/main/default/objects/Transaction_Type__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
        <fullName>Severity_Level__c</fullName>
        <label>Severity Level</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>