force-app/main/default/objects/Transaction_Type__c/fields/Show_on_Bill__c.field-meta.xml
<CustomField>
        <fullName>Show_on_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Bill</label>
        <type>Checkbox</type>
    </CustomField>