force-app/main/default/objects/Transaction_Type__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>