force-app/main/default/objects/Transaction_Type__c/fields/Sunday_Only__c.field-meta.xml
<CustomField>
        <fullName>Sunday_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday Only</label>
        <type>Checkbox</type>
    </CustomField>