force-app/main/default/objects/Transaction_Type__c/fields/Trouble__c.field-meta.xml
<CustomField>
        <fullName>Trouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trouble</label>
        <type>Checkbox</type>
    </CustomField>