force-app/main/default/objects/Transaction_Type__c/fields/Type_Complaint__c.field-meta.xml
<CustomField>
        <fullName>Type_Complaint__c</fullName>
        <inlineHelpText>Same as Type name; Delivery, COMO etc.</inlineHelpText>
        <label>Type Complaint</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>