force-app/main/default/objects/Transaction_Type__c/fields/Type_Name__c.field-meta.xml
<CustomField>
        <fullName>Type_Name__c</fullName>
        <inlineHelpText>Delivery, COMO etc.</inlineHelpText>
        <label>Type Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>