force-app/main/default/objects/Transaction_Type__c/fields/Use_in_Flows__c.field-meta.xml
<CustomField>
        <fullName>Use_in_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to determine if this transaction type is allowed in flows that will be used by a CSR</description>
        <inlineHelpText>Use this field to allow this transaction type to be used in a flow that the CSR will use.</inlineHelpText>
        <label>Use in Flows</label>
        <type>Checkbox</type>
    </CustomField>