force-app/main/default/objects/Transaction_Type__c/fields/Use_in_Self_Serve_Portal__c.field-meta.xml
<CustomField>
        <fullName>Use_in_Self_Serve_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to determine if this transaction type is allowed to be used in the self serve portal</description>
        <inlineHelpText>Use this field to allow this transaction type to be used in the self serve portal</inlineHelpText>
        <label>Use in Self Serve Portal</label>
        <type>Checkbox</type>
    </CustomField>