force-app/main/default/objects/Transaction_Type__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </CustomField>