force-app/main/default/objects/Transaction_Type__c/fields/When_to_Display__c.field-meta.xml
<CustomField>
        <fullName>When_to_Display__c</fullName>
        <inlineHelpText>Controls if cut-off controls visibility. Before only, After only, Anytime indicates cut-off is not a factor for display.</inlineHelpText>
        <label>When to Display</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before cut-off</fullName>
                </value>
                <value>
                    <fullName>After cut-off</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>