force-app/main/default/objects/Transaction_Type__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Message__c</columns>
        <columns>Type_Name__c</columns>
        <columns>Type_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>