force-app/main/default/objects/Transaction_Type__c/listViews/Types_for_Automation.listView-meta.xml
<ListView>
        <fullName>Types_for_Automation</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Day_Type__c</columns>
        <columns>When_to_Display__c</columns>
        <columns>Use_in_Self_Serve_Portal__c</columns>
        <columns>Apply_Credit_to_Subscription__c</columns>
        <columns>Redeliver__c</columns>
        <columns>Code__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Use_in_Flows__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Types for Automation</label>
    </ListView>