force-app/main/default/objects/Transaction_Type__c/listViews/Types_for_Automation_Sat_and_Sun_Only.listView-meta.xml
<ListView>
        <fullName>Types_for_Automation_Sat_and_Sun_Only</fullName>
        <columns>Category__c</columns>
        <columns>Delivery_Day_Type__c</columns>
        <columns>NAME</columns>
        <columns>When_to_Display__c</columns>
        <columns>Apply_Credit_to_Subscription__c</columns>
        <columns>Redeliver__c</columns>
        <columns>Code__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Use_in_Flows__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Delivery_Day_Type__c</field>
            <operation>equals</operation>
            <value>Saturday,Sunday,Not Sunday</value>
        </filters>
        <label>Types for Automation - Sat and Sun Only</label>
    </ListView>